@@ -2,7 +2,6 @@ package pages;
 
 import io.appium.java_client.AppiumBy;
 import io.appium.java_client.android.AndroidDriver;
-import io.qameta.allure.Step;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.interactions.PointerInput;
@@ -10,14 +9,14 @@ import org.openqa.selenium.interactions.Sequence;
 import utils.WaitUtils;
 
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.List;
 
 public class ViewPage {
     private AndroidDriver driver;
     private By popupMenuBtn = AppiumBy.accessibilityId("Popup Menu");
     private By makePopupBtn = AppiumBy.accessibilityId("Make a Popup!");
-    private By addBtn = By.xpath("(//android.widget.LinearLayout[@resource-id=\'android:id/content\'])[2]");
-    private By popup = By.xpath("//android.widget.Toast[@text=\'Clicked popup menu item Add\']");
+    private By addBtn = By.xpath("(//android.widget.LinearLayout[@resource-id='android:id/content'])[2]");
+    private By popup = By.xpath("//android.widget.Toast[@text='Clicked popup menu item Add']");
     private By dragDropBtn = AppiumBy.accessibilityId("Drag and Drop");
     private By source = By.xpath("//android.view.View[@resource-id='io.appium.android.apis:id/drag_dot_1']");
     private By target = By.id("io.appium.android.apis:id/drag_dot_2");
@@ -27,29 +26,24 @@ public class ViewPage {
         this.driver = driver;
     }
 
-    @Step("Скроллим до Popup Menu")
     public void scrollToPopupMenu() {
         driver.findElement(AppiumBy.androidUIAutomator(
                 "new UiScrollable(new UiSelector().scrollable(true))" +
                         ".scrollIntoView(new UiSelector().description(\"Popup Menu\"))"));
     }
 
-    @Step("Нажимаем на Popup Menu")
     public void clickPopupMenuBtn() {
         WaitUtils.waitForElementVisible(driver, popupMenuBtn).click();
     }
 
-    @Step("Нажимаем на Popup")
     public void clickMakePopupBtn() {
         WaitUtils.waitForElementVisible(driver, makePopupBtn).click();
     }
 
-    @Step("Нажимаем на Add")
     public void clickAddBtn() {
         WaitUtils.waitForElementVisible(driver, addBtn).click();
     }
 
-    @Step("Проверяем видимость popup")
     public boolean isPopupVisible() {
         try {
             driver.findElement(popup);
@@ -59,12 +53,10 @@ public class ViewPage {
         }
     }
 
-    @Step("Нажимаем на Drag and drop")
     public void clickDragDropBtn() {
         WaitUtils.waitForElementVisible(driver, dragDropBtn).click();
     }
 
-    @Step("Перетаскиваем элемент")
     public void dragAndDrop() {
         WebElement sourceWebEl = driver.findElement(source);
         WebElement targetWebEl = driver.findElement(target);
@@ -79,10 +71,9 @@ public class ViewPage {
                 PointerInput.Origin.fromElement(targetWebEl), 0, 0));
         dragAndDrop.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
 
-        driver.perform(Arrays.asList(dragAndDrop));
+        driver.perform(List.of(dragAndDrop));
     }
 
-    @Step("Проверяем сообщение об успешном перемещении элемента")
     public String isResultTextContains() {
         return driver.findElement(resultText).getText();
     }
